<resources>
    <string name="app_name">Demo</string>
    <string name="profile_picture">头像</string>
    <string name="Account">Account</string>
    <string name="username_hint">Input your username</string>
    <string name="password">Password</string>
    <string name="pwd_hint">Input your password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>
